--- a/bbscheduler.tex
+++ b/bbscheduler.tex
@@ -596,11 +596,11 @@ Our preliminary results demonstrate that
 % The Computer Society usually uses the plural form
 \section*{Acknowledgments}
 
-
-
-The authors would like to thank...
-
-
+This paper is partly sponsored by the U.S. National Science Foundation 
+under grants CNS-1320125 and CCF-1422009 
+and the Air Force Office of Scientific Research under grant FA9550-15-1-0190. 
+Any opinions, findings and conclusions or recommendations expressed in this material 
+are those of the author(s) and do not necessarily reflect the views of NSF and AFOSR.
 
 % trigger a \newpage just before the given reference
 % number - used to balance the columns on the last page
