--- a/ref.bib
+++ b/ref.bib
@@ -41,10 +41,16 @@
 	 howpublished = "\url{https://trac.mcs.anl.gov/projects/cobalt}",
 }
 
-@MISC{JobTrace,
-        title = {{The ANL Intrepid Log}},
-        howpublished = "\url{http://www.cs.huji.ac.il/labs/parallel/workload/l_anl_int}",
-}
+@INPROCEEDINGS{Tang:IPDPS:2010, 
+author={W. Tang and N. Desai and D. Buettner and Z. Lan}, 
+booktitle={Parallel Distributed Processing (IPDPS), 2010 IEEE International Symposium on}, 
+title={Analyzing and adjusting user runtime estimates to improve job scheduling on the Blue Gene/P}, 
+year={2010}, 
+pages={1-11}, 
+keywords={estimation theory;scheduling;Blue Gene/P system;backfilling;job runtime;job scheduling;short-job-first;user runtime estimates;Computer science;Delay;Dynamic scheduling;Laboratories;Large-scale systems;Mathematics;Out of order;Processor scheduling;Runtime;System performance;Blue Gene;job scheduling;runtime estimates}, 
+doi={10.1109/IPDPS.2010.5470474}, 
+ISSN={1530-2075}, 
+month={April},}
 
 @MISC{DataWarp,
         title = {{Cray DataWarp Applications I/O Accelerator}},
