--- a/simulation.tex
+++ b/simulation.tex
@@ -155,7 +155,7 @@ The bandwidth between a CPU node and an IO node is set to 2.5 GBps.
 \begin{figure}[htp]
         \centering
         \includegraphics[width=3.5in]{BBArchitecturewithBandwidth}
-        \caption{Our simulated burst buffer enabled HPC system inspired by Trinity at LANL\TODO{remove the blue SSD nodes in Fig}}
+        \caption{Our simulated burst buffer enabled HPC system is inspired by Trinity at LANL.}
         \label{Fig:BBArchitecture}
 \end{figure}
 
