--- a/simulation.tex
+++ b/simulation.tex
@@ -106,19 +106,23 @@ The allocated resources are released at the following time points:
 
 
 %==========XY============
-\NOTE{The timestamp listed below showing the way the evaluation metrics are calculated.}
-The timestamps of all the \textit{finish} events are calculated as follows:
+
+%The timestamps of all the \textit{finish} events are calculated as follows:
+%\begin{align}
+%        & TS_{f\_stagein} = TS_{s\_stagein} + \frac{bb\_in}{BW_{io\_to\_bb}}\label{Equ:FinIn} \\
+%        & TS_{f\_loadin} = TS_{s\_run} + \frac{bb\_in}{BW_{bb\_to\_cn}}\label{Equ:FinMemIn} \\
+%        & TS_{f\_run} = TS_{f\_loadin} + \frac{bb\_run}{BW_{cn\_to\_bb}} + rt\label{Equ:FinRun} \\
+%        & TS_{f\_loadout} = TS_{s\_stageout} + \frac{bb\_out}{BW_{cn\_to\_bb}}\label{Equ:FinMemOut} \\
+%        & TS_{f\_stageout} = TS_{f\_loadout} + \frac{bb\_out}{BW_{bb\_to\_io}} \label{Equ:FinOut}
+%\end{align}
+%where $TS_{f\_x}$ stands for the timestamps of the finishing phase $x$,
+%$TS_{s\_x}$ stands for the timestamps of the starting phase $x$,
+%$BW_{x\_to\_y}$ stands for the bandwidth between $x$ and $y$.
+%BBSim does not simulate the data transfer between IO nodes and PFS through the network.
+The time spent for I/O in our simulation is calculated by an analytical model, which is 
 \begin{align}
-        & TS_{f\_stagein} = TS_{s\_stagein} + \frac{bb\_in}{BW_{io\_to\_bb}}\label{Equ:FinIn} \\
-        & TS_{f\_loadin} = TS_{s\_run} + \frac{bb\_in}{BW_{bb\_to\_cn}}\label{Equ:FinMemIn} \\
-        & TS_{f\_run} = TS_{f\_loadin} + \frac{bb\_run}{BW_{cn\_to\_bb}} + rt\label{Equ:FinRun} \\
-        & TS_{f\_loadout} = TS_{s\_stageout} + \frac{bb\_out}{BW_{cn\_to\_bb}}\label{Equ:FinMemOut} \\
-        & TS_{f\_stageout} = TS_{f\_loadout} + \frac{bb\_out}{BW_{bb\_to\_io}} \label{Equ:FinOut}
+        & Time_{I/O} =\frac{DataAmount}{Link Bandwidth}\label{Equ:IOTime}
 \end{align}
-where $TS_{f\_x}$ stands for the timestamps of the finishing phase $x$,
-$TS_{s\_x}$ stands for the timestamps of the starting phase $x$,
-$BW_{x\_to\_y}$ stands for the bandwidth between $x$ and $y$.
-BBSim does not simulate the data transfer between IO nodes and PFS through the network.
 Though targeting on burst buffer enabled systems,
 BBSim also supports simulating job scheduling on HPC systems without burst buffer.
 Besides, it is easy to integrate other scheduling policies into BBsim.
