change the captioin for Fig3

--- a/simulation.tex
+++ b/simulation.tex
@@ -159,7 +159,7 @@ The bandwidth between a CPU node and an IO node is set to 2.5 GBps.
 \begin{figure}[htp]
         \centering
         \includegraphics[width=3.5in]{BBArchitecturewithBandwidth}
-        \caption{Our simulated burst buffer enabled HPC system is inspired by Trinity at LANL.}
+        \caption{Our simulated burst buffer enabled HPC system is inspired by Trinity at LANL. The bandwidth between compute nodes and burst buffer node is 8.0 GBps. The bandwidth between compute nodes and I/O nodes is 2.5 GBps.}
         \label{Fig:BBArchitecture}
 \end{figure}
 
