--- a/model.tex
+++ b/model.tex
@@ -5,7 +5,7 @@
         \centering
         \includegraphics[width=3.6in]{CerberusBBSystem}
         \caption{The design of 3-Phase burst buffer aware scheduling. The black arrows indicate 
-        the jobs changing of status; the red, peru and blue arrows in the bottom indicate the data flow in different phases. \TODO{you need to show Q\_I, Q\_R,Q\_O in the figure!!!-lan} }
+        the jobs changing of status; the red, peru and blue arrows in the bottom indicate the data flow in different phases.}
         \label{Fig:CerberusQueues}
 \end{figure}
 
