mod after change legend
Signed-off-by: Jiaqi Yan@IIT-PC <littlepretty881203@gmail.com>

--- a/experiments.tex
+++ b/experiments.tex
@@ -467,7 +467,7 @@ justifies the necessity that a user needs to provide data capacity demand for ea
                 \includegraphics[width=2.5in]{DPvsFIFOFigures/1000jobs_dp_vs_fifo_throughput}
                 \label{Fig:DPvsFIFOThroughput}
         }
-        \caption{ Cerberus v.s. FCFS \TODO{change the legend: ``optimized Cerberus" to ``Cerberus"; ``FCFS Cerberus" to ``FCFS". move the avg legend to top}}
+        \caption{Cerberus v.s. FCFS}
         \label{Fig:DPvsFIFOPerformance}
 \end{figure*}
 
