--- a/simulation.tex
+++ b/simulation.tex
@@ -121,7 +121,7 @@ The allocated resources are released at the following time points:
 %BBSim does not simulate the data transfer between IO nodes and PFS through the network.
 The time spent for I/O in our simulation is calculated by an analytical model, which is 
 \begin{align}
-        & Time_{I/O} =\frac{DataAmount}{Link Bandwidth}\label{Equ:IOTime}
+        & \text{Time}_{\text{I/O}} =\frac{\text{Data Amount}}{\text{Link Bandwidth}}\label{Equ:IOTime}
 \end{align}
 Though targeting on burst buffer enabled systems,
 BBSim also supports simulating job scheduling on HPC systems without burst buffer.
